BlackBeans.cydsn/BUILD.log
--------------- Build Started: 03/31/2019 03:20:11 Project: BlackBeans, Configuration: ARM GCC 5.4-2016-q2-update Debug ---------------
cydsfit.exe -.appdatapath "C:\Users\teru\AppData\Local\Cypress Semiconductor\PSoC Creator\4.2" -.fdsnotice -.fdswarpdepfile=warp_dependencies.txt -.fdselabdepfile=elab_dependencies.txt -.fdsbldfile=generated_files.txt -.fdsreffile=referenced_files.txt -p "D:\user\teru\Documents\PSoC Creator\BlackBeans\BlackBeans.cydsn\BlackBeans.cyprj" -d CY8C5888LTI-LP097 -s "D:\user\teru\Documents\PSoC Creator\BlackBeans\BlackBeans.cydsn\Generated_Source\PSoC5" -- -yv2 -q10 -ygs -o2 -v3 -.fftcfgtype=LE
Elaborating Design...
HDL Generation...
Synthesis...
Tech Mapping...
ADD: mpr.M0037: information: Unused pieces of the design have been optimized out. See the Tech mapping section of the report file for details.
 * D:\user\teru\Documents\PSoC Creator\BlackBeans\BlackBeans.cydsn\codegentemp\BlackBeans.rpt (Tech mapping)
Analog Placement...
Analog Routing...
Analog Code Generation...
Digital Placement...
Digital Routing...
Bitstream Generation...
Bitstream Verification...
Static timing analysis...
Warning: sta.M0021: BlackBeans_timing.html: Warning-1350: Asynchronous path(s) exist from "ClockBlock/clk_bus_glb_ff" to "CyBUS_CLK". See the timing report for details. (File=D:\user\teru\Documents\PSoC Creator\BlackBeans\BlackBeans.cydsn\BlackBeans_timing.html)
Warning: sta.M0019: BlackBeans_timing.html: Warning-1366: Setup time violation found in a path from clock ( CyBUS_CLK ) to clock ( CyBUS_CLK ). (File=D:\user\teru\Documents\PSoC Creator\BlackBeans\BlackBeans.cydsn\BlackBeans_timing.html)
API Generation...
Dependency Generation...
Cleanup...
arm-none-eabi-gcc.exe -mcpu=cortex-m3 -mthumb -I. -IGenerated_Source\PSoC5 -Wa,-alh=.\CortexM3\ARM_GCC_541\Debug/main.lst -funsigned-char -g -D DEBUG -D CY_CORE_ID=0 -Wall -ffunction-sections -ffat-lto-objects -Og -c main.c -o .\CortexM3\ARM_GCC_541\Debug\main.o
In file included from Generated_Source\PSoC5/project.h:47:0,
                 from main.c:12:
Generated_Source\PSoC5/BLDCMotor_1_HallEncoder.h:36:6: error: #error Counter_v3_0 detected with a constant 0 for the enable, a constant 0 for the count or constant 1 for the reset. This will prevent the component from operating.
     #error Counter_v3_0 detected with a constant 0 for the enable, a \
      ^
The command 'arm-none-eabi-gcc.exe' failed with exit code '1'.
--------------- Build Failed: 03/31/2019 03:20:25 ---------------
